@@ -536,3 +536,6 @@ function (which expects ff objects and supports parallel processing)
 
 2010-07-25 M. Ritchie committed version 1.7.6
 ** fixed bug introduced in 1.7.4 by addition of tryCatch() into readIdatFiles().  Thanks to Nolwenn Le Meur for pointing this out.
+
+2010--7-28 M. Ritchie committed version 1.7.7
+** added omni express 12 as one of the chip options for Illumina.  Also added a check for copy number probes (this chip doesn't have any).
